# mescor

./: .gitmodules  README.md  configure  m7_cross.txt  meson.build  meson_options.txt
lib/cmsis/: meson.build
lib/freertos/: CMakeLists.txt  meson.build
lib/freertos/src/: multicore.c
lib/start/: board_hardware.c  meson.build  usb_device_cdc_eem.c
src/: blink_led.c
